<resources>
    <string name="app_name">HR-S</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="ok">Oke</string>
    <string name="cancel">Batal</string>

    <string name="email_address">Alamat Email</string>
    <string name="phone1">No. Handphone</string>
    <string name="phone2">No. Handphone Alternatif</string>
    <string name="address">Alamat Rumah</string>
    <string name="male">Laki Laki</string>
    <string name="female">Perempuan</string>
    <string name="password">Kata Sandi</string>
    <string name="signin">Sign In</string>
    <string name="save">Simpan</string>
    <string name="login">Masuk</string>
    <string name="company_name">Reasoft 98</string>
    <string name="hr_system">Human Resource - System</string>
    <string name="hint_login">Gunakan email perusahaan untuk masuk kedalam sistem</string>
    <string name="are_you_sure_to_checkout">Apakah anda yakin akan melakukan Check Out sebelum jam pulang?</string>
    <string name="you_late">Anda telat masuk kerja</string>

    <string name="attendance">Kehadiran</string>
    <string name="my_profile">Data Pribadi</string>
    <string name="check_in">Masuk</string>
    <string name="workin">Masuk Kerja</string>
    <string name="workout">Pulang Kerja</string>
    <string name="in_office">Berada di kantor</string>
    <string name="out_office">Berada di luar kantor</string>
    <string name="scanning">Sedang melakukan pencarian</string>
    <string name="change_password">Ganti kata sandi</string>
    <string name="note">Catatan</string>
    <string name="pob">Tempat Lahir</string>
    <string name="dob">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="please_insert_note">Masukan alasan</string>

    <string name="sunday">Minggu</string>
    <string name="monday">Senin</string>
    <string name="tuesday">Selasa</string>
    <string name="wednesday">Rabu</string>
    <string name="thursday">Kamis</string>
    <string name="friday">Jumat</string>
    <string name="saturday">Sabtu</string>

    <string name="history">Riwayat Absensi</string>
    <string name="empty_data">Tidak ada data</string>
    <string name="error_invalid_password">Kata sandi tidak benar</string>
    <string name="error_invalid_email">Email tidak benar</string>
    <string name="error_field_required">Wajib di isi</string>
    <string name="please_give_permision">Silahkan berikan akses syatem android</string>
    <string name="self_info">Informasi pribadi</string>
    <string name="contact_info">Informasi Kontak</string>
    <string name="current_password">Kata sandi saat ini</string>
    <string name="n_password">Kata sandi baru</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="current_password_not_match">Kata sandi tidak benar</string>
    <string name="invalid_langth_password">Kata sandi tidak tepat</string>
    <string name="confirm_password_not_match">Konfirmasi Kata sandi tidak tepat</string>
</resources>
