<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="g.rezza.moch.hrsystem.LoginActivity">

    <RelativeLayout
        android:padding="@dimen/size_10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lnly_body_00"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:background="@color/white_00_t80"
            android:padding="@dimen/size_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/text_arsenal_blcak_00"
                android:textSize="@dimen/size_16sp"
                android:textStyle="italic"
                android:layout_marginBottom="@dimen/size_15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/hint_login" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtx_email_00"
                    style="@style/EditText.Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:imeActionId="6"
                    android:imeActionLabel="Sign In"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:textSize="@dimen/size_18sp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtx_password_00"
                    style="@style/EditText.Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeActionId="6"
                    android:imeActionLabel="Sign In"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:textSize="@dimen/size_18sp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txvw_company_name_00"
            style="@style/text_arsenal_white_00"
            android:textSize="@dimen/size_22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/size_30dp"
            android:text="@string/company_name" />
        <TextView
            android:layout_below="@+id/txvw_company_name_00"
            style="@style/text_arsenal_grey_01"
            android:textSize="@dimen/size_16sp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/hr_system" />

        <RelativeLayout
            android:id="@+id/bbtn_login_00"
            android:background="@drawable/button_green"
            android:layout_below="@+id/lnly_body_00"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp">

            <TextView
                style="@style/text_arsenal_white_00"
                android:textSize="@dimen/size_20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login" />

        </RelativeLayout>

    </RelativeLayout>



</RelativeLayout>
